<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/x710"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_stroke_white_backgroud"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_id"
            android:layout_gravity="center"
            android:textColor="@color/black333"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black333"
                android:layout_height="match_parent"
                android:textSize="@dimen/dp15"
                android:text="@string/user_name" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hin"
                android:textSize="@dimen/dp15"
                android:textColorHint="@color/gray999"
                android:background="@color/white"
                android:textColor="@color/black333"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black333"
                android:layout_height="match_parent"
                android:textSize="@dimen/dp15"
                android:text="@string/user_studentId" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_height="wrap_content"
                android:hint="@string/user_studentId_hin"
                android:textSize="@dimen/dp15"
                android:textColorHint="@color/gray999"
                android:background="@color/white"
                android:textColor="@color/black333"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x20"
            android:layout_marginBottom="@dimen/dp10"
            android:paddingRight="@dimen/x20">

            <Button
                android:id="@+id/shouldpay_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_them_color"
                android:text="@string/cancle"
                android:textColor="@color/blue4DA9FF"
                android:textSize="17sp" />

            <Button
                android:id="@+id/shouldpay_pay"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/x50"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_corner_blue"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>