<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/line_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:src="@mipmap/fanhui" />

        <TextView
            android:id="@+id/title"
            style="@style/textview40_black"
            android:layout_centerInParent="true"
            android:text="重置设备密码"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/lin_passw_now"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_item_press_bg"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            style="@style/textview30_black"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/passw_now"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passw_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/please_input_passw_now"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:paddingLeft="@dimen/x40"
            android:textColor="@color/black"
            android:textColorHint="@color/gray999"
            android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/line_passw_now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp5"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_item_press_bg"
        android:gravity="center_vertical">

        <TextView
            style="@style/textview30_black"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/passw_creat"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passw_creat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/please_input_passw_new"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:paddingLeft="@dimen/x40"
            android:textColor="@color/black"
            android:textColorHint="@color/gray999"
            android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp5"
        android:background="@drawable/selector_item_press_bg"
        android:gravity="center_vertical">

        <TextView
            style="@style/textview30_black"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/passw_sure"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passw_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/please_input_passw_again"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:paddingLeft="@dimen/x40"
            android:textColor="@color/black"
            android:textColorHint="@color/gray999"
            android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/dp12"
        android:text="@string/please_pwd_hin"/>

    <Button
        android:id="@+id/setting_pwd_commit"
        style="@style/login_btn_new"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/dp50"
        android:text="@string/button_sure" />
</LinearLayout>