<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp37"
        android:layout_marginRight="@dimen/dp37"
        android:orientation="vertical">
        <!--android:inputType="number"-->

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp37"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:cursorVisible="true"
            android:drawableLeft="@mipmap/login_me"
            android:drawablePadding="@dimen/x40"
            android:drawableStart="@mipmap/login_me"
            android:hint="@string/input_hin_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/gray999"
            android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
            android:textSize="15sp" />

        <View
            style="@style/view_all"
            android:layout_marginTop="5dp" />


        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50px"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:drawableLeft="@mipmap/login_password"
            android:drawablePadding="@dimen/x40"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColorHint="@color/gray999"
            android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
            android:textSize="15sp" />

        <View
            style="@style/view_all"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/login_enter"
            style="@style/login_btn_new"
            android:layout_marginTop="@dimen/dp37"
            android:text="@string/login_enter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/font40px"
                android:background="@drawable/selector_bg_corner_blue_white"
                android:paddingBottom="2dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="2dp"
                android:text="@string/registers" />

            <TextView
                android:id="@+id/txt_backPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font40px"
                android:text="@string/back_password"
                android:textColor="@color/gray_black"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <View
            style="@style/view_all"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:text="or" />

        <View
            style="@style/view_all"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_loginQuick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/selector_bg_corner_blue_white"
        android:paddingBottom="2dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="2dp"
        android:text="@string/quick_login" />

    <LinearLayout
        android:id="@+id/line_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_loginQuick"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agreement"
            android:textColor="@color/gray999"
            android:textSize="@dimen/dp12" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black333"
            android:textSize="@dimen/dp13" />
    </LinearLayout>
</RelativeLayout>