<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/x710"
        android:layout_height="115dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_stroke_white_backgroud"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/should_pay"
            android:textColor="@color/black333"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20">

            <Button
                android:id="@+id/shouldpay_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector_corner_yellow_white"
                android:text="@string/cancle"
                android:textColor="@color/blue4DA9FF"
                android:textSize="17sp" />

            <Button
                android:id="@+id/shouldpay_pay"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/x50"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_corner_blue"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>